--- a/_pages/Knowledge-Base/HOWTOs/howto-route-traffic-through-vpn.html
+++ b/_pages/Knowledge-Base/HOWTOs/howto-route-traffic-through-vpn.html
@@ -75,7 +75,7 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="../Robotics/Robotics.html"
                         title="next chapter">Robotics</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
