--- a/_pages/Knowledge-Base/Programming/Programming.html
+++ b/_pages/Knowledge-Base/Programming/Programming.html
@@ -25,8 +25,8 @@
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="next" title="Robotics" href="../Robotics/Robotics.html" />
-    <link rel="prev" title="Embedded Development" href="../Embedded-Development/Embedded-Development.html" />
+    <link rel="next" title="Embedded Development" href="../Embedded-Development/Embedded-Development.html" />
+    <link rel="prev" title="Robotics" href="../Robotics/Robotics.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -43,10 +43,10 @@
           <a href="../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Robotics/Robotics.html" title="Robotics"
+          <a href="../Embedded-Development/Embedded-Development.html" title="Embedded Development"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../Embedded-Development/Embedded-Development.html" title="Embedded Development"
+          <a href="../Robotics/Robotics.html" title="Robotics"
              accesskey="P">previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
@@ -68,12 +68,12 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../Embedded-Development/Embedded-Development.html"
-                        title="previous chapter">Embedded Development</a></p>
-  <h4>Next topic</h4>
   <p class="topless"><a href="../Robotics/Robotics.html"
-                        title="next chapter">Robotics</a></p>
-<div id="searchbox" style="display: none">
+                        title="previous chapter">Robotics</a></p>
+  <h4>Next topic</h4>
+  <p class="topless"><a href="../Embedded-Development/Embedded-Development.html"
+                        title="next chapter">Embedded Development</a></p>
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
@@ -97,10 +97,10 @@
           <a href="../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Robotics/Robotics.html" title="Robotics"
+          <a href="../Embedded-Development/Embedded-Development.html" title="Embedded Development"
              >next</a> |</li>
         <li class="right" >
-          <a href="../Embedded-Development/Embedded-Development.html" title="Embedded Development"
+          <a href="../Robotics/Robotics.html" title="Robotics"
              >previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
