--- a/_pages/Knowledge-Base/Robotics/Robotics.html
+++ b/_pages/Knowledge-Base/Robotics/Robotics.html
@@ -25,7 +25,8 @@
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="prev" title="Programming" href="../Programming/Programming.html" />
+    <link rel="next" title="Programming" href="../Programming/Programming.html" />
+    <link rel="prev" title="Route Traffic" href="../HOWTOs/howto-route-traffic-through-vpn.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -43,6 +44,9 @@
              accesskey="I">index</a></li>
         <li class="right" >
           <a href="../Programming/Programming.html" title="Programming"
+             accesskey="N">next</a> |</li>
+        <li class="right" >
+          <a href="../HOWTOs/howto-route-traffic-through-vpn.html" title="Route Traffic"
              accesskey="P">previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
@@ -64,9 +68,12 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
+  <p class="topless"><a href="../HOWTOs/howto-route-traffic-through-vpn.html"
+                        title="previous chapter">Route Traffic</a></p>
+  <h4>Next topic</h4>
   <p class="topless"><a href="../Programming/Programming.html"
-                        title="previous chapter">Programming</a></p>
-<div id="searchbox" style="display: none">
+                        title="next chapter">Programming</a></p>
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
@@ -91,6 +98,9 @@
              >index</a></li>
         <li class="right" >
           <a href="../Programming/Programming.html" title="Programming"
+             >next</a> |</li>
+        <li class="right" >
+          <a href="../HOWTOs/howto-route-traffic-through-vpn.html" title="Route Traffic"
              >previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
