--- a/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
+++ b/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
@@ -120,7 +120,7 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="../IMU-Attitude-Estimation-Library/IMU-Attitude-Estimation-Library.html"
                         title="next chapter">IMU Attitude Estimation Library</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
