--- a/_pages/Projects/IMU-Attitude-Estimation-Library/IMU-Attitude-Estimation-Library.html
+++ b/_pages/Projects/IMU-Attitude-Estimation-Library/IMU-Attitude-Estimation-Library.html
@@ -26,7 +26,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Software" href="../../Resource/software.html" />
-    <link rel="prev" title="Welcome to Ruixiang’s Wiki" href="../../../index.html" />
+    <link rel="prev" title="Build Your Own Quadrotor" href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -46,7 +46,7 @@
           <a href="../../Resource/software.html" title="Software"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../../index.html" title="Welcome to Ruixiang’s Wiki"
+          <a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              accesskey="P">previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
@@ -68,12 +68,12 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../../index.html"
-                        title="previous chapter">Welcome to Ruixiang&#8217;s Wiki</a></p>
+  <p class="topless"><a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html"
+                        title="previous chapter">Build Your Own Quadrotor</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../../Resource/software.html"
                         title="next chapter">Software</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
@@ -100,7 +100,7 @@
           <a href="../../Resource/software.html" title="Software"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../../index.html" title="Welcome to Ruixiang’s Wiki"
+          <a href="../Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              >previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
