--- a/_pages/Resource/online_documents.html
+++ b/_pages/Resource/online_documents.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="../../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../index.html" />
-    <link rel="next" title="Robotics" href="../Knowledge-Base/Robotics/Robotics.html" />
+    <link rel="next" title="HOWTOs" href="../Knowledge-Base/HOWTOs/HOWTOs.html" />
     <link rel="prev" title="Online Course" href="online_course.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -43,7 +43,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Knowledge-Base/Robotics/Robotics.html" title="Robotics"
+          <a href="../Knowledge-Base/HOWTOs/HOWTOs.html" title="HOWTOs"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="online_course.html" title="Online Course"
@@ -112,9 +112,9 @@
   <p class="topless"><a href="online_course.html"
                         title="previous chapter">Online Course</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../Knowledge-Base/Robotics/Robotics.html"
-                        title="next chapter">Robotics</a></p>
-<div id="searchbox" style="display: none">
+  <p class="topless"><a href="../Knowledge-Base/HOWTOs/HOWTOs.html"
+                        title="next chapter">HOWTOs</a></p>
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
       <input type="text" name="q" />
@@ -138,7 +138,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Knowledge-Base/Robotics/Robotics.html" title="Robotics"
+          <a href="../Knowledge-Base/HOWTOs/HOWTOs.html" title="HOWTOs"
              >next</a> |</li>
         <li class="right" >
           <a href="online_course.html" title="Online Course"
