--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html"
                         title="next chapter">Build Your Own Quadrotor</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="search.html" method="get">
       <input type="text" name="q" />
