--- a/_pages/Knowledge-Base/Embedded-Development/Embedded-Development.html
+++ b/_pages/Knowledge-Base/Embedded-Development/Embedded-Development.html
@@ -25,8 +25,7 @@
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="next" title="Programming" href="../Programming/Programming.html" />
-    <link rel="prev" title="Online Documents" href="../../Resource/online_documents.html" />
+    <link rel="prev" title="Programming" href="../Programming/Programming.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -44,9 +43,6 @@
              accesskey="I">index</a></li>
         <li class="right" >
           <a href="../Programming/Programming.html" title="Programming"
-             accesskey="N">next</a> |</li>
-        <li class="right" >
-          <a href="../../Resource/online_documents.html" title="Online Documents"
              accesskey="P">previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
@@ -93,12 +89,9 @@
       <div class="sphinxsidebar">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Resource/online_documents.html"
-                        title="previous chapter">Online Documents</a></p>
-  <h4>Next topic</h4>
   <p class="topless"><a href="../Programming/Programming.html"
-                        title="next chapter">Programming</a></p>
-<div id="searchbox" style="display: none">
+                        title="previous chapter">Programming</a></p>
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
@@ -123,9 +116,6 @@
              >index</a></li>
         <li class="right" >
           <a href="../Programming/Programming.html" title="Programming"
-             >next</a> |</li>
-        <li class="right" >
-          <a href="../../Resource/online_documents.html" title="Online Documents"
              >previous</a> |</li>
         <li><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> 
       </ul>
