--- a/_pages/Knowledge-Base/HOWTOs/HOWTOs.html
+++ b/_pages/Knowledge-Base/HOWTOs/HOWTOs.html
@@ -78,7 +78,7 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="howto-route-traffic-through-vpn.html"
                         title="next chapter">Route Traffic</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
       <input type="text" name="q" />
