--- a/_pages/Resource/online_course.html
+++ b/_pages/Resource/online_course.html
@@ -173,7 +173,7 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="online_documents.html"
                         title="next chapter">Online Documents</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
       <input type="text" name="q" />
