--- a/_pages/Resource/software.html
+++ b/_pages/Resource/software.html
@@ -148,7 +148,7 @@
   <h4>Next topic</h4>
   <p class="topless"><a href="online_course.html"
                         title="next chapter">Online Course</a></p>
-<div id="searchbox" style="display: none">
+<div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
       <input type="text" name="q" />
