--- a/source/_themes/customized_pyramid/layout.html
+++ b/source/_themes/customized_pyramid/layout.html
@@ -1,4 +1,4 @@
-{%- extends "basic/layout.html" %}
+{%- extends "../customized_basic/base_layout.html" %}
 
 {%- block extrahead %}
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
