added google analytics

--- a/_pages/Knowledge-Base/Programming/Programming.html
+++ b/_pages/Knowledge-Base/Programming/Programming.html
@@ -5,7 +5,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-47255965-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
     <!-- <title>Programming &mdash; RDU-Wiki 1.0 documentation</title> -->
     <title>Programming</title>
     
@@ -33,7 +44,7 @@
     <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="next" title="Embedded Development" href="../Embedded-Development/Embedded-Development.html" />
+    <link rel="next" title="Embedded System" href="../Embedded-System/Embedded-System.html" />
     <link rel="prev" title="Robotics" href="../Robotics/Robotics.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -51,7 +62,7 @@
           <a href="../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Embedded-Development/Embedded-Development.html" title="Embedded Development"
+          <a href="../Embedded-System/Embedded-System.html" title="Embedded System"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="../Robotics/Robotics.html" title="Robotics"
@@ -80,8 +91,8 @@
   <p class="topless"><a href="../Robotics/Robotics.html"
                         title="previous chapter">Robotics</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../Embedded-Development/Embedded-Development.html"
-                        title="next chapter">Embedded Development</a></p>
+  <p class="topless"><a href="../Embedded-System/Embedded-System.html"
+                        title="next chapter">Embedded System</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
@@ -106,7 +117,7 @@
           <a href="../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Embedded-Development/Embedded-Development.html" title="Embedded Development"
+          <a href="../Embedded-System/Embedded-System.html" title="Embedded System"
              >next</a> |</li>
         <li class="right" >
           <a href="../Robotics/Robotics.html" title="Robotics"
