--- a/_pages/Knowledge-Base/Robotics/Robotics.html
+++ b/_pages/Knowledge-Base/Robotics/Robotics.html
@@ -5,7 +5,18 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    
+    <script type="text/javascript">
+
+      var _gaq = _gaq || [];
+      _gaq.push(['_setAccount', 'UA-47255965-1']);
+      _gaq.push(['_trackPageview']);
+
+      (function() {
+        var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+        ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+      })();
+    </script>
     <!-- <title>Robotics &mdash; RDU-Wiki 1.0 documentation</title> -->
     <title>Robotics</title>
     
@@ -34,7 +45,7 @@
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Programming" href="../Programming/Programming.html" />
-    <link rel="prev" title="Route Traffic" href="../HOWTOs/howto-route-traffic-through-vpn.html" />
+    <link rel="prev" title="How to Obtain Gurobi Academic License Off Campus" href="../HOWTOs/howto-obtain-gurobi-academic-license-off-campus.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -54,7 +65,7 @@
           <a href="../Programming/Programming.html" title="Programming"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../HOWTOs/howto-route-traffic-through-vpn.html" title="Route Traffic"
+          <a href="../HOWTOs/howto-obtain-gurobi-academic-license-off-campus.html" title="How to Obtain Gurobi Academic License Off Campus"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -77,8 +88,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../HOWTOs/howto-route-traffic-through-vpn.html"
-                        title="previous chapter">Route Traffic</a></p>
+  <p class="topless"><a href="../HOWTOs/howto-obtain-gurobi-academic-license-off-campus.html"
+                        title="previous chapter">How to Obtain Gurobi Academic License Off Campus</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../Programming/Programming.html"
                         title="next chapter">Programming</a></p>
@@ -109,7 +120,7 @@
           <a href="../Programming/Programming.html" title="Programming"
              >next</a> |</li>
         <li class="right" >
-          <a href="../HOWTOs/howto-route-traffic-through-vpn.html" title="Route Traffic"
+          <a href="../HOWTOs/howto-obtain-gurobi-academic-license-off-campus.html" title="How to Obtain Gurobi Academic License Off Campus"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
