updated table in programming

--- a/_pages/Knowledge-Base/Programming/Programming.html
+++ b/_pages/Knowledge-Base/Programming/Programming.html
@@ -112,15 +112,13 @@
 <col width="19%" />
 <col width="21%" />
 </colgroup>
-<thead valign="bottom">
-<tr class="row-odd"><th class="head">Address</th>
-<th class="head">0x100</th>
-<th class="head">0x101</th>
-<th class="head">0x102</th>
-<th class="head">0x103</th>
-</tr>
-</thead>
 <tbody valign="top">
+<tr class="row-odd"><td>Address</td>
+<td>0x100</td>
+<td>0x101</td>
+<td>0x102</td>
+<td>0x103</td>
+</tr>
 <tr class="row-even"><td>Value</td>
 <td>0x01</td>
 <td>0x23</td>
@@ -138,15 +136,13 @@
 <col width="19%" />
 <col width="21%" />
 </colgroup>
-<thead valign="bottom">
-<tr class="row-odd"><th class="head">Address</th>
-<th class="head">0x100</th>
-<th class="head">0x101</th>
-<th class="head">0x102</th>
-<th class="head">0x103</th>
-</tr>
-</thead>
 <tbody valign="top">
+<tr class="row-odd"><td>Address</td>
+<td>0x100</td>
+<td>0x101</td>
+<td>0x102</td>
+<td>0x103</td>
+</tr>
 <tr class="row-even"><td>Value</td>
 <td>0x67</td>
 <td>0x45</td>
