--- a/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
+++ b/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
@@ -87,7 +87,7 @@
 <dd><ul class="first last simple">
 <li>Inertial measurement unit (IMU)</li>
 <li>Flight microcontroller</li>
-<li>A mechanical frame * 1</li>
+<li>Mechanical frame * 1</li>
 <li>DC brushless motors * 4</li>
 <li>DSC for brushless motors * 4</li>
 </ul>
