tested make on lab computer

--- a/_pages/Knowledge-Base/HOWTOs/howto-obtain-gurobi-academic-license-off-campus.html
+++ b/_pages/Knowledge-Base/HOWTOs/howto-obtain-gurobi-academic-license-off-campus.html
@@ -41,11 +41,11 @@
     <script type="text/javascript" src="../../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="up" title="HOWTOs" href="HOWTOs.html" />
-    <link rel="next" title="Robotics" href="../Robotics/Robotics.html" />
+    <link rel="next" title="How to Safely Revert to a Previous Commit in Git" href="howto-safely-revert-to-a-previous-commit-in-git.html" />
     <link rel="prev" title="HOWTOs" href="HOWTOs.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -63,7 +63,7 @@
           <a href="../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Robotics/Robotics.html" title="Robotics"
+          <a href="howto-safely-revert-to-a-previous-commit-in-git.html" title="How to Safely Revert to a Previous Commit in Git"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="HOWTOs.html" title="HOWTOs"
@@ -170,8 +170,8 @@
   <p class="topless"><a href="HOWTOs.html"
                         title="previous chapter">HOWTOs</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../Robotics/Robotics.html"
-                        title="next chapter">Robotics</a></p>
+  <p class="topless"><a href="howto-safely-revert-to-a-previous-commit-in-git.html"
+                        title="next chapter">How to Safely Revert to a Previous Commit in Git</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
@@ -196,7 +196,7 @@
           <a href="../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Robotics/Robotics.html" title="Robotics"
+          <a href="howto-safely-revert-to-a-previous-commit-in-git.html" title="How to Safely Revert to a Previous Commit in Git"
              >next</a> |</li>
         <li class="right" >
           <a href="HOWTOs.html" title="HOWTOs"
@@ -208,7 +208,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2015, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.3.1.
     </div>
   </body>
 </html>
