--- a/_pages/Knowledge-Base/HOWTOs/HOWTOs.html
+++ b/_pages/Knowledge-Base/HOWTOs/HOWTOs.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-47255965-1']);
+      _gaq.push(['_setAccount', 'UA-67949307-1']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -45,7 +45,7 @@
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="How to Obtain Gurobi Academic License Off Campus" href="howto-obtain-gurobi-academic-license-off-campus.html" />
-    <link rel="prev" title="Online Documents" href="../../Resource/online_documents.html" />
+    <link rel="prev" title="Software Tools" href="../../Resource/software.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -65,7 +65,7 @@
           <a href="howto-obtain-gurobi-academic-license-off-campus.html" title="How to Obtain Gurobi Academic License Off Campus"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../Resource/online_documents.html" title="Online Documents"
+          <a href="../../Resource/software.html" title="Software Tools"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -94,8 +94,8 @@
       <div class="sphinxsidebar" role="navigation" aria-label="main navigation">
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Resource/online_documents.html"
-                        title="previous chapter">Online Documents</a></p>
+  <p class="topless"><a href="../../Resource/software.html"
+                        title="previous chapter">Software Tools</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="howto-obtain-gurobi-academic-license-off-campus.html"
                         title="next chapter">How to Obtain Gurobi Academic License Off Campus</a></p>
@@ -126,7 +126,7 @@
           <a href="howto-obtain-gurobi-academic-license-off-campus.html" title="How to Obtain Gurobi Academic License Off Campus"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../Resource/online_documents.html" title="Online Documents"
+          <a href="../../Resource/software.html" title="Software Tools"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
