--- a/_pages/Resource/software.html
+++ b/_pages/Resource/software.html
@@ -8,7 +8,7 @@
     <script type="text/javascript">
 
       var _gaq = _gaq || [];
-      _gaq.push(['_setAccount', 'UA-47255965-1']);
+      _gaq.push(['_setAccount', 'UA-67949307-1']);
       _gaq.push(['_trackPageview']);
 
       (function() {
@@ -44,8 +44,8 @@
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../index.html" />
-    <link rel="next" title="Online Course" href="online_course.html" />
-    <link rel="prev" title="Mobile Robot Toolkit" href="../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" />
+    <link rel="next" title="HOWTOs" href="../Knowledge-Base/HOWTOs/HOWTOs.html" />
+    <link rel="prev" title="Reference Docs" href="ref_docs.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -62,10 +62,10 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="online_course.html" title="Online Course"
+          <a href="../Knowledge-Base/HOWTOs/HOWTOs.html" title="HOWTOs"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" title="Mobile Robot Toolkit"
+          <a href="ref_docs.html" title="Reference Docs"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../index.html">Main Page</a> &raquo;</li> 
@@ -194,11 +194,11 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html"
-                        title="previous chapter">Mobile Robot Toolkit</a></p>
+  <p class="topless"><a href="ref_docs.html"
+                        title="previous chapter">Reference Docs</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="online_course.html"
-                        title="next chapter">Online Course</a></p>
+  <p class="topless"><a href="../Knowledge-Base/HOWTOs/HOWTOs.html"
+                        title="next chapter">HOWTOs</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
@@ -223,10 +223,10 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="online_course.html" title="Online Course"
+          <a href="../Knowledge-Base/HOWTOs/HOWTOs.html" title="HOWTOs"
              >next</a> |</li>
         <li class="right" >
-          <a href="../Projects/Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" title="Mobile Robot Toolkit"
+          <a href="ref_docs.html" title="Reference Docs"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../index.html">Main Page</a> &raquo;</li> 
