--- a/_pages/Resource/guide.html
+++ b/_pages/Resource/guide.html
@@ -45,7 +45,7 @@
     <link rel="shortcut icon" href="../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../index.html" />
     <link rel="next" title="Build Your Own Quadrotor" href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" />
-    <link rel="prev" title="Referred Literature" href="literature.html" />
+    <link rel="prev" title="Useful References" href="literature.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -65,7 +65,7 @@
           <a href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="literature.html" title="Referred Literature"
+          <a href="literature.html" title="Useful References"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../index.html">Main Page</a> &raquo;</li> 
@@ -97,7 +97,7 @@
         <div class="sphinxsidebarwrapper">
   <h4>Previous topic</h4>
   <p class="topless"><a href="literature.html"
-                        title="previous chapter">Referred Literature</a></p>
+                        title="previous chapter">Useful References</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html"
                         title="next chapter">Build Your Own Quadrotor</a></p>
@@ -128,7 +128,7 @@
           <a href="../Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html" title="Build Your Own Quadrotor"
              >next</a> |</li>
         <li class="right" >
-          <a href="literature.html" title="Referred Literature"
+          <a href="literature.html" title="Useful References"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../index.html">Main Page</a> &raquo;</li> 
