--- a/_pages/Resource/software.html
+++ b/_pages/Resource/software.html
@@ -44,7 +44,7 @@
     <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../index.html" />
-    <link rel="next" title="Referred Literature" href="literature.html" />
+    <link rel="next" title="Useful References" href="literature.html" />
     <link rel="prev" title="Online Course" href="online_course.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
@@ -62,7 +62,7 @@
           <a href="../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="literature.html" title="Referred Literature"
+          <a href="literature.html" title="Useful References"
              accesskey="N">next</a> |</li>
         <li class="right" >
           <a href="online_course.html" title="Online Course"
@@ -198,7 +198,7 @@
                         title="previous chapter">Online Course</a></p>
   <h4>Next topic</h4>
   <p class="topless"><a href="literature.html"
-                        title="next chapter">Referred Literature</a></p>
+                        title="next chapter">Useful References</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../search.html" method="get">
@@ -223,7 +223,7 @@
           <a href="../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="literature.html" title="Referred Literature"
+          <a href="literature.html" title="Useful References"
              >next</a> |</li>
         <li class="right" >
           <a href="online_course.html" title="Online Course"
