updated howto for vpn

--- a/_pages/Knowledge-Base/Robotics/Robotics.html
+++ b/_pages/Knowledge-Base/Robotics/Robotics.html
@@ -41,11 +41,11 @@
     <script type="text/javascript" src="../../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
-    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
-    <link rel="next" title="Programming" href="../Programming/Programming.html" />
-    <link rel="prev" title="How to Safely Revert to a Previous Commit in Git" href="../../Projects/Application-Notes/HOWTOs/howto-safely-revert-to-a-previous-commit-in-git.html" />
+    <link rel="next" title="Unmanned Aerial Vehicles" href="../Unmanned_Aerial_Vehicles/UAV.html" />
+    <link rel="prev" title="How to Install Eclipse CDT with Java 8" href="../../Projects/Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Neuton&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Nobile:regular,italic,bold,bolditalic&amp;subset=latin" type="text/css" media="screen" charset="utf-8" />
 <!--[if lte IE 6]>
@@ -62,10 +62,10 @@
           <a href="../../../genindex.html" title="General Index"
              accesskey="I">index</a></li>
         <li class="right" >
-          <a href="../Programming/Programming.html" title="Programming"
+          <a href="../Unmanned_Aerial_Vehicles/UAV.html" title="Unmanned Aerial Vehicles"
              accesskey="N">next</a> |</li>
         <li class="right" >
-          <a href="../../Projects/Application-Notes/HOWTOs/howto-safely-revert-to-a-previous-commit-in-git.html" title="How to Safely Revert to a Previous Commit in Git"
+          <a href="../../Projects/Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" title="How to Install Eclipse CDT with Java 8"
              accesskey="P">previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
@@ -262,11 +262,11 @@
 </ul>
 
   <h4>Previous topic</h4>
-  <p class="topless"><a href="../../Projects/Application-Notes/HOWTOs/howto-safely-revert-to-a-previous-commit-in-git.html"
-                        title="previous chapter">How to Safely Revert to a Previous Commit in Git</a></p>
+  <p class="topless"><a href="../../Projects/Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html"
+                        title="previous chapter">How to Install Eclipse CDT with Java 8</a></p>
   <h4>Next topic</h4>
-  <p class="topless"><a href="../Programming/Programming.html"
-                        title="next chapter">Programming</a></p>
+  <p class="topless"><a href="../Unmanned_Aerial_Vehicles/UAV.html"
+                        title="next chapter">Unmanned Aerial Vehicles</a></p>
 <div id="searchbox" style="display: none" role="search">
   <h3>Quick search</h3>
     <form class="search" action="../../../search.html" method="get">
@@ -291,18 +291,18 @@
           <a href="../../../genindex.html" title="General Index"
              >index</a></li>
         <li class="right" >
-          <a href="../Programming/Programming.html" title="Programming"
+          <a href="../Unmanned_Aerial_Vehicles/UAV.html" title="Unmanned Aerial Vehicles"
              >next</a> |</li>
         <li class="right" >
-          <a href="../../Projects/Application-Notes/HOWTOs/howto-safely-revert-to-a-previous-commit-in-git.html" title="How to Safely Revert to a Previous Commit in Git"
+          <a href="../../Projects/Application-Notes/HOWTOs/howto-install-eclipse-cdt-with-java8.html" title="How to Install Eclipse CDT with Java 8"
              >previous</a> |</li>
         <!-- <li class="nav-item nav-item-0"><a href="../../../index.html">RDU-Wiki 1.0 documentation</a> &raquo;</li> -->
         <li class="nav-item nav-item-0"><a href="../../../index.html">Main Page</a> &raquo;</li> 
       </ul>
     </div>
     <div class="footer" role="contentinfo">
-        &copy; Copyright 2015, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.
+        &copy; Copyright 2016, Ruixiang Du.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.3.
     </div>
   </body>
 </html>
