--- a/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
+++ b/_pages/Projects/Build-Your-Own-Quadrotor/Build-Your-Own-Quadrotor.html
@@ -41,7 +41,7 @@
     <script type="text/javascript" src="../../../_static/jquery.js"></script>
     <script type="text/javascript" src="../../../_static/underscore.js"></script>
     <script type="text/javascript" src="../../../_static/doctools.js"></script>
-    <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <link rel="shortcut icon" href="../../../_static/favicon.ico"/>
     <link rel="top" title="RDU-Wiki 1.0 documentation" href="../../../index.html" />
     <link rel="next" title="Mobile Robot Toolkit" href="../Mobile-Robot-Toolkit/Mobile-Robot-Toolkit.html" />
@@ -214,7 +214,7 @@
     </div>
     <div class="footer" role="contentinfo">
         &copy; Copyright 2016, Ruixiang Du.
-      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.2.3.
+      Created using <a href="http://sphinx-doc.org/">Sphinx</a> 1.4.
     </div>
   </body>
 </html>
